--- a/FavPlayer.html
+++ b/FavPlayer.html
@@ -10,7 +10,7 @@
 <body>
 <nav style="background-color: aqua;">
     <ul>
-    <li><a href="Sport.html">Home</a></li>
+    <li><a href="index.html">Home</a></li>
     <li><a href="FavPlayer.html">My Favourite Player</a></li>
     </ul>
     </nav>
